New feature: Add list all appIds api.
