# server/core/proto/services.go
@@ -155,7 +155,23 @@ func GetInfoFromTagKV(kv *mvccpb.KeyValue) (serviceId, domainProject string, dat
 	return
 }
 
-func TransferToMicroServiceKeys(in []*DependencyKey, domainProject string) []*MicroServiceKey {
+func GetInfoFromSvcIndexKV(kv *mvccpb.KeyValue) (key *MicroServiceKey, data []byte) {
+	keys, data := KvToResponse(kv)
+	l := len(keys)
+	if l < 6 {
+		return
+	}
+	domainProject := fmt.Sprintf("%s/%s", keys[l-6], keys[l-5])
+	return &MicroServiceKey{
+		Tenant:      domainProject,
+		Environment: keys[l-4],
+		AppId:       keys[l-3],
+		ServiceName: keys[l-2],
+		Version:     keys[l-1],
+	}, data
+}
+
+func DependenciesToKeys(in []*DependencyKey, domainProject string) []*MicroServiceKey {
 	rst := []*MicroServiceKey{}
 	for _, value := range in {
 		rst = append(rst, &MicroServiceKey{
@@ -169,7 +185,7 @@ func TransferToMicroServiceKeys(in []*DependencyKey, domainProject string) []*Mi
 	return rst
 }
 
-func ToMicroServiceKey(domainProject string, in *MicroService) *MicroServiceKey {
+func MicroServiceToKey(domainProject string, in *MicroService) *MicroServiceKey {
 	return &MicroServiceKey{
 		Tenant:      domainProject,
 		Environment: in.Environment,
